scss/partials/_user_avatar.scss
$avatar_size: 32;

button.user-avatar-button{
  margin: 0;
  border: 0px solid transparent;
  background-color: transparent;
  width: #{$avatar_size}px;
  height: #{$avatar_size}px;
  border-radius: #{$avatar-size / 2}px;

  &.disabled-user-menu {
    cursor: default;
  }

  &:active, &:focus {
    outline: none;
    border: 0px solid tranparent;
  }

  div.user-avatar-img-container {
    width: #{$avatar_size}px;
    height: #{$avatar_size}px;
    white-space: nowrap;
    text-align: center;

    div.user-avatar-img-helper {
      display: inline-block;
      height: 100%;
      vertical-align: middle;
    }

    img.user-avatar-img {
      max-width: #{$avatar_size}px;
      max-height: #{$avatar_size}px;
      border-radius: #{$avatar-size / 2}px;
      vertical-align: middle;
    }
  }
}

